--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "mytreasures",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "admin-lte": "^2.3.11",
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0"
+  }
 }
