--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -29,4 +29,4 @@ test:
 # and move the `production:` environment over there.
 
 production:
-  secret_key_base: ENV['MT_SECRET_KEY']
+  secret_key_base: <%= ENV['MT_SECRET_KEY'] %>
